--- a/play.html
+++ b/play.html
@@ -4,7 +4,7 @@
 	<title>Drive Stream</title>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<link href="http://vjs.zencdn.net/6.2.4/video-js.css" rel="stylesheet">
+	<link href="lib/videojs.min.css" rel="stylesheet">
 	<style type="text/css">
 		html,
         body {
@@ -137,8 +137,8 @@
 		  }
 		}
 	</style>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="http://vjs.zencdn.net/6.2.4/video.js"></script>
+	<script src="lib/jquery.min.js"></script>
+	<script src="lib/videojs.min.js"></script>
 </head>
 <body>
 	<div id="divVideo">
