--- a/play.html
+++ b/play.html
@@ -162,7 +162,7 @@
         <div class="rect5"></div>
     </div>
     <div id="divText">
-        <p style="color:white;font-family: Arial, Helvetica, sans-serif;">To watch the video, please install the extension or addons in the following link: <a href="https://github.com/herudi/fake-stream-drive-extension">https://github.com/herudi/fake-stream-drive-extension</a> </p>
+        <p style="color:white;font-family: Arial, Helvetica, sans-serif;">To watch the video, please install the extension or addons in the following link: <a style="color:red" href="https://github.com/herudi/fake-stream-drive-extension">https://github.com/herudi/fake-stream-drive-extension</a> </p>
     </div>
     <script type="text/javascript">
 		var player = videojs('video');
