--- a/play.html
+++ b/play.html
@@ -196,7 +196,7 @@
 				    key:'herudi'
 				},"*");
 				window.addEventListener("message", function(event) {
-					if (event.data.keyStream && event.data.keyStream=='idureh') {
+					if (event.data.keyStream && event.data.keyStream=='herudi') {
 						if(callback) {
 				            callback(event.data.data);
 				        }
